--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,12 @@ services:
       dockerfile: Dockerfile
     ports:
       - '11000:80'
-  # server:
-  #   build:
-  #     context: ./server
-  #     context: Dockerfile
-  #   port:
-  #     - '58642:80'
+  server:
+    build:
+      context: ./server
+      dockerfile: Dockerfile
+    ports:
+      - '58642:80'
 
 networks:
   default:
