Fix css in docker

--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -2,6 +2,7 @@ FROM node:latest AS builder
 
 WORKDIR /app
 COPY package.json /app/package.json
+RUN npm install -g npm@latest
 RUN npm install
 
 COPY . .
