--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 rusqlite="0.24.1"
 actix-web = "3.1.0"
+actix-cors= "0.5.0"
 elo  = "0.3.0"
-itertools = "0.9.0"
 serde="*"
 serde_derive="*"
