--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,9 +11,10 @@ rusqlite="0.24.1"
 actix-web = "3.1.0"
 actix-cors= "0.5.0"
 elo  = "0.3.0"
-serde="*"
-serde_derive="*"
 sha2 = "0.9.2"
 uuid = { version = "0.8", features = ["v4"] }
 chrono = "0.4"
-serde_json = "*"
+actix-rt = "1.1.1"
+serde_json = "1.0.59"
+serde_derive = "1.0.117"
+serde = "1.0.117"
