--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rusqlite="0.24.1"
 actix-web = "3.1.0"
 actix-cors= "0.5.0"
 elo  = "0.3.0"
@@ -17,3 +16,7 @@ chrono = "0.4"
 serde_json = "1.0.59"
 serde_derive = "1.0.117"
 serde = "1.0.117"
+
+[dependencies.rusqlite]
+version = "0.24.1"
+features = ["bundled"]
