--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,12 +1,14 @@
 FROM rust:latest AS builder
 
+RUN apt update && \
+    apt dist-upgrade -y && \
+    apt install -y musl-tools && \
+    rustup target add x86_64-unknown-linux-musl
+
 WORKDIR /server
 COPY . /server/
-RUN rustup default nightly
-RUN cargo update
-RUN cargo build --release
+RUN cargo install --target x86_64-unknown-linux-musl --path .
 
 FROM alpine:latest
-# EXPOSE 80
-COPY --from=builder /server/target/release/table_tennis /usr/local/bin/table_tennis
-RUN table_tennis
+COPY --from=builder /usr/local/cargo/bin/table_tennis .
+CMD ["./table_tennis"]
