--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "3.1.0"
+actix-web = { version = "3.1.0", features = ["openssl"] }
+openssl = { version  = "0.10", features = ["vendored"] }
 actix-cors= "0.5.0"
 elo  = "0.3.0"
 sha2 = "0.9.2"
