--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -10,5 +10,8 @@ COPY . /server/
 RUN cargo install --target x86_64-unknown-linux-musl --path .
 
 FROM alpine:latest
+RUN apk add --no-cache pkgconfig openssl-dev ca-certificates linux-headers && update-ca-certificates
+RUN apk add openssl
+
 COPY --from=builder /usr/local/cargo/bin/table_tennis .
 CMD ["./table_tennis"]
