--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,7 +9,9 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
+        with: 
+          clean: false
       - name: Build the stack
         run: docker-compose build --parallel
       - name: Bring up
