--- a/website/package.json
+++ b/website/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nivo/core": "^0.65.0",
+    "@nivo/line": "^0.65.1",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -12,7 +14,6 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-select": "^3.1.0",
-    "recharts": "^1.8.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
