--- a/server/rustfmt.toml
+++ b/server/rustfmt.toml
@@ -12,7 +12,7 @@ imports_indent = "Block"
 imports_layout = "Mixed"
 inline_attribute_width = 100
 match_block_trailing_comma = true
-merge_imports = true
+imports_granularity=Crate
 newline_style = "Unix"
 overflow_delimited_expr = true
 reorder_impl_items = true
