--- a/server/rustfmt.toml
+++ b/server/rustfmt.toml
@@ -5,6 +5,7 @@ brace_style = "AlwaysNextLine"
 combine_control_expr = false
 control_brace_style = "AlwaysNextLine"
 edition = "2018"
+chain_width = 80
 empty_item_single_line = true
 enum_discrim_align_threshold = 20
 format_strings = true
@@ -12,7 +13,7 @@ imports_indent = "Block"
 imports_layout = "Mixed"
 inline_attribute_width = 100
 match_block_trailing_comma = true
-imports_granularity=Crate
+imports_granularity = "Crate"
 newline_style = "Unix"
 overflow_delimited_expr = true
 reorder_impl_items = true
