--- a/website/package.json
+++ b/website/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-select": "^3.1.0",
+    "terminal-in-react": "^4.3.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
