--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -3,7 +3,7 @@ FROM node:14 AS builder
 WORKDIR /app
 COPY package.json /app/package.json
 RUN npm install -g npm@latest
-RUN npm install
+RUN npm install --legacy-peer-deps
 
 COPY . .
 RUN npm run build --prod
