--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -17,6 +17,7 @@ chrono = "0.4"
 serde_json = "1.0.59"
 serde_derive = "1.0.117"
 serde = "1.0.117"
+lazy_static = "1.4.0"
 
 [dependencies.rusqlite]
 version = "0.24.1"
