--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -18,6 +18,7 @@ serde_json = "1.0.59"
 serde_derive = "1.0.117"
 serde = "1.0.117"
 lazy_static = "1.4.0"
+regex = "1.4.3"
 
 [dependencies.rusqlite]
 version = "0.24.1"
