--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -1,4 +1,5 @@
 FROM node:14 AS builder
+ARG build_mode
 
 WORKDIR /app
 COPY package.json /app/package.json
@@ -6,10 +7,9 @@ RUN npm install -g npm@latest
 RUN npm install --legacy-peer-deps
 
 COPY . .
-RUN npm run build --prod
+RUN npm run $build_mode
 
 FROM node:14-alpine
 RUN npm install -g serve
 COPY --from=builder /app/build /build
-RUN ls
 CMD ["serve", "-s", "build", "-l", "3000"]
