--- a/website/package.json
+++ b/website/package.json
@@ -18,23 +18,16 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "REACT_APP_URL=http://localhost REACT_APP_IP=58642 react-scripts start",
+    "build:local": "REACT_APP_URL=http://localhost REACT_APP_IP=58642 react-scripts build",
+    "build:dev": "REACT_APP_URL=http://sivert.dev REACT_APP_IP=38642 react-scripts build",
+    "build:prod": "REACT_APP_URL=https://sivert.dev REACT_APP_IP=58642 react-scripts build --prod"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": ["react-app", "react-app/jest"]
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
