Fix url and build

--- a/.github/workflows/docker-image-development.yml
+++ b/.github/workflows/docker-image-development.yml
@@ -11,6 +11,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build the stack
-        run: docker-compose build --parallel
+        run: docker-compose build --parallel website-dev server-dev
       - name: Bring up
         run: docker-compose up -d website-dev server-dev
