--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,6 +11,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build the stack
-        run: docker-compose build --parallel
+        run: docker-compose build --parallel website server
       - name: Bring up
         run: docker-compose up -d website server
