--- a/website/package.json
+++ b/website/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "REACT_APP_URL=http://localhost REACT_APP_IP=58642 react-scripts start",
     "build:local": "REACT_APP_URL=http://localhost REACT_APP_IP=58642 react-scripts build",
-    "build:dev": "REACT_APP_URL=http://sivert.dev REACT_APP_IP=38642 react-scripts build",
+    "build:dev": "REACT_APP_URL=https://sivert.dev REACT_APP_IP=38642 react-scripts build",
     "build:prod": "REACT_APP_URL=https://sivert.dev REACT_APP_IP=58642 react-scripts build --prod"
   },
   "eslintConfig": {
