--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,7 +8,7 @@ RUN apt update && \
 
 WORKDIR /server
 COPY . /server/
-RUN cargo install $build_mode --target x86_64-unknown-linux-musl --path .
+RUN cargo install --target x86_64-unknown-linux-musl --path .
 
 FROM alpine:latest
 RUN apk add --no-cache pkgconfig openssl-dev
