--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -1,15 +1,12 @@
 [package]
-name = "table_tennis"
+name = "server"
 version = "0.1.0"
-authors = ["sivertjoe <sivert-joh@hotmail.com>"]
+authors = ["sivertjoe"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = { version = "3.1.0", features = ["openssl"] }
-actix-cors= "0.5.0"
-openssl = { version  = "0.10", features = ["vendored"] }
 elo  = "0.3.0"
 sha2 = "0.9.2"
 uuid = { version = "0.8", features = ["v4"] }
@@ -19,9 +16,6 @@ serde_derive = "1.0.117"
 serde = "1.0.117"
 lazy_static = "1.4.0"
 regex = "1.4.3"
-server = { path = "server" }
-server_core = { path = "server_core" }
-
-[dependencies.rusqlite]
-version = "0.24.1"
-features = ["bundled"]
+rusqlite = { version = "0.24.1", features = ["bundled"] }
+server_core = { path = "../server_core" }
+server_macro= { path = "../server_macro" }
