Add functionality for getting images from server

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 actix-web = { version = "3.1.0", features = ["openssl"] }
 actix-cors= "0.5.0"
+actix-files = "0.5.0"
 openssl = { version  = "0.10", features = ["vendored"] }
 elo  = "0.3.0"
 sha2 = "0.9.2"
