--- a/website/package.json
+++ b/website/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.0",
     "react-select": "^3.1.0",
     "terminal-in-react": "^4.3.1",
+    "use-http": "^1.0.24",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
