--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,10 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = { version = "3.3.3", features = ["openssl"] }
+actix-web = { version = "3.3.3" }
 actix-cors= "0.5.0"
 actix-files = "0.5.0"
-openssl = { version  = "0.10.38", features = ["vendored"] }
 elo  = "0.3.0"
 sha2 = "0.9.2"
 uuid = { version = "0.8", features = ["v4"] }
